@@ -4,6 +4,8 @@
     [compression of sparse bitarrays](sparse_compression.rst)
   * add `util.any_and()`
   * add `util.intervals()`
+  * move functionality of the following utility functions entirely to C:
+    `hex2ba()`, `base2ba()`, `deserialize()`, `vl_decode()`
   * add [distance metrics](../examples/distance.py) example:
     dice, hamming, jaccard, kulczynski1, rogerstanimoto, russellrao,
     sokalmichener, sokalsneath, yule
